# agent-harness

./: .gitignore  README.md  README_zh.md  pyproject.toml  types.py
agent_harness/: __init__.py  types.py
agent_harness/agent/: __init__.py  context.py  loop.py  sub_agent.py
agent_harness/builtins/: __init__.py  bash_tool.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  list_dir.py
agent_harness/compact/: __init__.py  auto_compact.py  compactor.py  micro_compact.py  prompt.py  token_estimation.py
agent_harness/llm/: __init__.py  anthropic.py  base.py  openai.py  openai_compat.py  retry.py
agent_harness/memory/: __init__.py  store.py
agent_harness/prompts/: __init__.py  agent_types.py  builder.py  environment.py  sections.py  session.py  tool_descriptions.py
agent_harness/tasks/: tracker.py
agent_harness/tools/: __init__.py  base.py  orchestration.py  permissions.py
docs/: 01-concepts.md  02-llm-adapters.md  03-tools.md  04-orchestration.md  05-permissions.md  06-agent-loop.md  07-sub-agent.md  08-tasks.md  09-memory.md  10-langgraph.md  11-cookbook.md  index.md
docs/migration/: 00-roadmap.md  01-retry-streaming.md  02-compaction.md  03-hooks-plan-bash-safety.md  04-coordinator.md  05-mcp-client.md  06-skills-session.md
integrations/: __init__.py  langgraph.py
llm/: anthropic.py  openai.py
tasks/: __init__.py
